@@ -119,6 +119,7 @@ DECL_OR_DEF(FORMAT_PARAGRAPH_BEFORE_EXIT);
 DECL_OR_DEF(CONT_UPDATE_AFTER_ERROR);
 DECL_OR_DEF(REMOVE_ALL_ATTACH);
 DECL_OR_DEF(SEND_DIFF_ENCODING);
+DECL_OR_DEF(OPEN_ANOTHER_COMPOSER);
 
 DECL_OR_DEF(MAX);
 
