@@ -9,9 +9,10 @@
 Release 0.67 'Constance' ??? ??, 2006
 -------------------------------------
 
+2006-02-12 VZ: reuse an existing composer when replying to the same message twice
 2005-11-28 VZ: updated to build with recent swig (>= 1.3.25)
-2005-11-16 XN: added feature that allows user to drop messages from a folder to the composer window
-2005-11-15 XN: added feature that allows user to drop files to the composer window
+2005-11-16 XN: allow user to drop messages from a folder to the composer window
+2005-11-15 XN: allow user to drop files to the composer window
 2005-09-24 VZ: added "Mark answered" command
 2005-07-05 VZ: multiple config files for sharing options between installations
 2005-06-24 VZ: automatically select the viewer best fit for the shown message
